[package]
name = "shfast"
version = "0.1.0"
authors = ["lijia <lijia.c@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
encoding_rs = "0.8"
bytes="0.5"
protobuf = { version = "2", features = ["with-bytes"] }



[build-dependencies]
protoc-rust = "2.0"



